# crudmenta20

./: Cargo.toml
.github/workflows/: linter.yaml  workflow.yaml  workflow.yml
public/: index.html  style.css
src/: db.rs  main.rs  server.rs  users.rs
